# Cheetah-Software

./: .gitignore  .gitmodules
common/include/Controllers/: LegController.h
common/include/Utilities/: PeriodicTask.h
config/: default-terrain.yaml  demo-user-parameters.yaml
rc_test/: rc_test_main.cpp
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h
robot/include/rt/: rt_rc_interface.h
robot/src/: RobotRunner.cpp  SimulationBridge.cpp
sim/include/: Graphics3D.h
sim/src/: GameController.cpp  Graphics3D.cpp  Simulation.cpp  main.cpp
user/: CMakeLists.txt
user/Demo_Controller/: ActionCtrl.cpp  ActionCtrl.h  CMakeLists.txt  DemoUserParameters.h  Demo_Controller.cpp  Demo_Controller.hpp  FoldLegsCtrl.cpp  FoldLegsCtrl.h  StandUpCtrl.cpp  StandUpCtrl.h  StateCtrl.cpp  StateCtrl.h  WalkCtrl.cpp  WalkCtrl.h  main.cpp
user/MIT_Controller/FSM_States/: FSM_State_RecoveryStand.cpp
user/PythonController/: BaseController.cpp  BaseController.h  CMakeLists.txt  PropertyHelper.cpp  PropertyHelper.h  ProxyController.cpp  ProxyController.h  demo.py  jump.py  main.cpp  standup.py
